# moneybit

./: .gitignore  .gitmodules  PROPOSAL  README.md  TODO  bower.json  build.sh  logo.txt  middleman.cabal  moneybit  moneybit.cabal  moneybit.json  package.json  stack-windows.yaml  stack.yaml  submodule-update.sh  test.mnemonic
electron-data/: main.js  package.json
main/: Main.hs
main/Main/: Options.hs
src/: Api.hs  Application.hs  Config.hs  Routes.hs
src/Api/: WebSocket.hs
src/Api/WebSocket/: RPC.hs
src/Application/: Types.hs
src/Data/Json/: RPC.hs
src/Monero/: Types.hs
src/Monero/Client/: RPC.hs
src/Pages/: NotFound.hs
src/Process/: Client.hs  Types.hs
src/Process/Client/: RPC.hs
src/Routes/: Assets.hs
src/Templates/: Master.hs
test/: Test.hs
