Name:                   moneybit
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -optl-static -optl-pthread
  Exposed-Modules:      Server
                        Application
                        Application.Types
                        Data.Json.RPC
                        Routes
                        Pages.NotFound
                        Templates.Master
  Build-Depends:        base >= 4.8 && < 5
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , data-default
                      , directory
                      , exceptions
                      , heredoc
                      , hostname-validate
                      , http-client
                      , http-types
                      , lucid
                      , markup
                      , monad-logger
                      , mtl
                      , nested-routes >= 7.2.2
                      , network
                      , network-uri
                      , path-extra
                      , process
                      , saltine
                      , text
                      , transformers
                      , unordered-containers
                      , urlpath
                      , warp
                      , wai
                      , wai-extra
                      , wai-middleware-content-type
                      , wai-middleware-static
                      , wai-transformers
                      , webpage

Executable moneybit
  Default-Language:     Haskell2010
  HS-Source-Dirs:       main
  GHC-Options:          -Wall -threaded -optl-static -optl-pthread
  Main-Is:              Main.hs
  Other-Modules:        Main.Options
  Build-Depends:        base >= 4.8 && < 5
                      , moneybit
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , data-default
                      , directory
                      , exceptions
                      , filepath
                      , http-types
                      , mtl
                      , nested-routes
                      , optparse-applicative
                      , text
                      , urlpath
                      , wai-extra
                      , wai-middleware-static
                      , wai-transformers
                      , warp
                      , yaml

Source-Repository head
  Type:                 git
--  Location:
