Name:                   moneybit
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Server
                        Api
                        Application
                        Application.Types
                        Data.Json.RPC
                        Routes
                        Routes.Assets
                        Pages.NotFound
                        Templates.Master
  Build-Depends:        base >= 4.8 && < 5
                      , aeson
                      , aeson-pretty
                      , base16-bytestring
                      , base58-bytestring
                      , base64-bytestring
                      , bytestring
                      , cryptonite
                      , data-default
                      , directory
                      , exceptions
                      , file-embed
                      , heredoc
                      , hostname-validate
                      , http-client
                      , http-types
                      , lucid
                      , markup
                      , mmorph
                      , monad-logger
                      , mtl
                      , nested-routes >= 7.2.2
                      , network
                      , network-uri
                      , path-extra
                      , process
                      , saltine
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , urlpath
                      , warp
                      , wai
                      , wai-extra
                      , wai-middleware-content-type >= 0.5.0.1
                      , wai-transformers
                      , webpage

Executable moneybit
  Default-Language:     Haskell2010
  HS-Source-Dirs:       main
  GHC-Options:          -Wall -threaded -with-rtsopts=-T
  Main-Is:              Main.hs
  Other-Modules:        Main.Options
  Build-Depends:        base >= 4.8 && < 5
                      , moneybit
                      , aeson
                      , aeson-pretty
                      , base64-bytestring
                      , bytestring
                      , data-default
                      , directory
                      , ekg
                      , exceptions
                      , filepath
                      , http-types
                      , mtl
                      , nested-routes
                      , optparse-applicative
                      , saltine
                      , template-haskell
                      , text
                      , urlpath
                      , wai-extra
                      , wai-middleware-static
                      , wai-transformers
                      , warp
                      , yaml

Source-Repository head
  Type:                 git
--  Location:
