Name:                   moneybit
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fforce-recomp
  Exposed-Modules:      Server
                        Api
                        Api.WebSocket
                        Api.WebSocket.RPC
                        Application
                        Application.Types
                        Routes
                        Routes.Assets
                        Pages.NotFound
                        Templates.Master
  Build-Depends:        base >= 4.8 && < 5
                      , hmonero
                      , aeson
                      , aeson-pretty
                      , async
                      , base16-bytestring
                      , base58-bytestring
                      , base64-bytestring
                      , bytestring
                      , containers
                      , cryptonite
                      , data-default
                      , directory <= 1.2.2.0
                      , exceptions
                      , filepath
                      , file-embed
                      , ghc-prim
                      , heredoc
                      , hostname-validate
                      , http-client
                      , http-types
                      , lucid
                      , logging-effect
                      , markup
                      , mmorph
                      , monad-logger
                      , mtl
                      , nested-routes >= 7.2.2
                      , network
                      , network-uri
                      , path-extra
                      , process
                      , saltine
                      , strict
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , urlpath
                      , warp
                      , wai
                      , wai-extra
                      , wai-middleware-content-type >= 0.5.0.1
                      , wai-transformers
                      , webpage
                      , websockets

Executable moneybit
  Default-Language:     Haskell2010
  HS-Source-Dirs:       main
  GHC-Options:          -Wall -threaded -with-rtsopts=-T
  Main-Is:              Main.hs
  Other-Modules:        Main.Options
  Build-Depends:        base >= 4.8 && < 5
                      , moneybit
                      , hmonero
                      , aeson
                      , aeson-pretty
                      , base64-bytestring
                      , bytestring
                      , containers
                      , data-default
                      , directory
                      , ekg
                      , exceptions
                      , filepath
                      , heredoc
                      , http-types
                      , mtl
                      , nested-routes
                      , optparse-applicative
                      , process
                      , saltine
                      , strict
                      , template-haskell
                      , text
                      , urlpath
                      , wai-extra
                      , wai-middleware-static
                      , wai-transformers
                      , warp
                      , yaml
  if os(windows)
    Build-Depends:      Win32


Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
                      , main
  GHC-Options:          -Wall -threaded
  Main-Is:              Test.hs
  Other-Modules:        Main.Options
  Build-Depends:        base
                      , moneybit
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , base64-bytestring
                      , containers
                      , data-default
                      , directory
                      , exceptions
                      , filepath
                      , optparse-applicative
                      , saltine
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , template-haskell
                      , text
                      , urlpath
                      , wai
                      , wai-extra
                      , wai-transformers


Source-Repository head
  Type:                 git
--  Location:
